--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Med Screen Labs – NJ's Premier Toxicology Laboratory Serving Addiction Treatment Facilities</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
