--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/type/icons.css">
     <link rel="stylesheet" type="text/css" href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900italic,900,700italic,600italic,600,400italic,700,300italic,300,200italic,200'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -60,5 +61,6 @@
     <script type="text/javascript" src="./assets/js/revolution.extension.video.min.js" ></script>
     <script type="text/javascript" src="./assets/js/plugins.js" ></script>
     <script type="text/javascript" src="./assets/js/scripts.js" ></script>
+
   </body>
 </html>
