--- a/public/index.html
+++ b/public/index.html
@@ -25,14 +25,14 @@
     -->
     <title>Med Screen Labs – NJ's Premier Toxicology Laboratory Serving Addiction Treatment Facilities</title>
     <!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"> -->
-    <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/plugins.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/revolution/settings.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/revolution/layers.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/revolution/navigation.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/color/orange.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/type/icons.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/plugins.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/revolution/settings.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/revolution/layers.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/revolution/navigation.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/color/orange.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/type/icons.css">
     <link rel="stylesheet" type="text/css" href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900italic,900,700italic,600italic,600,400italic,700,300italic,300,200italic,200'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
@@ -50,17 +50,17 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script type="text/javascript" src="./assets/js/jquery.min.js" ></script>
-    <script type="text/javascript" src="./assets/js/bootstrap.min.js" ></script>
-    <script type="text/javascript" src="./assets/js/jquery.themepunch.tools.min.js?rev=5.0" ></script>
-    <script type="text/javascript" src="./assets/js/jquery.themepunch.revolution.min.js?rev=5.0" ></script>
-    <script type="text/javascript" src="./assets/js/revolution.extension.slideanims.min.js" ></script>
-    <script type="text/javascript" src="./assets/js/revolution.extension.layeranimation.min.js" ></script>
-    <script type="text/javascript" src="./assets/js/revolution.extension.navigation.min.js" ></script>
-    <script type="text/javascript" src="./assets/js/revolution.extension.carousel.min.js" ></script>
-    <script type="text/javascript" src="./assets/js/revolution.extension.video.min.js" ></script>
-    <script type="text/javascript" src="./assets/js/plugins.js" ></script>
-    <script type="text/javascript" src="./assets/js/scripts.js" ></script>
+    <script type="text/javascript" src="/assets/js/jquery.min.js" ></script>
+    <script type="text/javascript" src="/assets/js/bootstrap.min.js" ></script>
+    <script type="text/javascript" src="/assets/js/jquery.themepunch.tools.min.js?rev=5.0" ></script>
+    <script type="text/javascript" src="/assets/js/jquery.themepunch.revolution.min.js?rev=5.0" ></script>
+    <script type="text/javascript" src="/assets/js/revolution.extension.slideanims.min.js" ></script>
+    <script type="text/javascript" src="/assets/js/revolution.extension.layeranimation.min.js" ></script>
+    <script type="text/javascript" src="/assets/js/revolution.extension.navigation.min.js" ></script>
+    <script type="text/javascript" src="/assets/js/revolution.extension.carousel.min.js" ></script>
+    <script type="text/javascript" src="/assets/js/revolution.extension.video.min.js" ></script>
+    <script type="text/javascript" src="/assets/js/plugins.js" ></script>
+    <script type="text/javascript" src="/assets/js/scripts.js" ></script>
 
   </body>
 </html>
